--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "@types/faker": "^4.1.12"
+    "@types/faker": "^4.1.12",
+    "@types/styled-components": "^5.1.0"
   }
 }
